


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#2E7A5C"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_Constituent_Units"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Constituent Units"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25dp"
        />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="vertical">



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="40dp"
        >
        <TableRow
            android:background="@color/green">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Units"
                android:textColor="@color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/HeadQuarters"
                android:textColor="@color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Easteast"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Hajipur"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/EastCoast"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Bhubaneswar"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/NorthCentral"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Prayagraj"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/NorthEastern"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Gorakhpur"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/NortheastFrontier"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Guwahati"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Easteast"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Hajipur"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/NorthEastern"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Gorakhpur"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/NorthCentral"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Prayagraj"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/EastCoast"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Bhubaneswar"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/NortheastFrontier"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Guwahati"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Easteast"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Hajipur"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/EastCoast"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Bhubaneswar"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/NorthCentral"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Prayagraj"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/NorthEastern"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Gorakhpur"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/NortheastFrontier"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Guwahati"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Easteast"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Hajipur"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/NorthEastern"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Gorakhpur"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/NorthCentral"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Prayagraj"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/EastCoast"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Bhubaneswar"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

        </TableRow>


    </TableLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>